error.txt
   Compiling curse v0.1.0 (/home/shaun/Development/curse)
warning: unused imports: `Canvas`, `Dialog`, `EditView`, `ScrollView`, `SelectView`
  --> src/views/interface/interface.rs:18:13
   |
18 |     Button, Canvas, Dialog, DummyView, EditView, LinearLayout, ListView, OnEventView, PaddedView,
   |             ^^^^^^  ^^^^^^             ^^^^^^^^
19 |     Panel, ResizedView, ScrollView, SelectView, TextView,
   |                         ^^^^^^^^^^  ^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0308]: mismatched types
  --> src/views/interface/wordfinder.rs:88:51
   |
88 |                 if self.selected_cell_index + 1 < self.cells.len() {
   |                                                   ^^^^^^^^^^^^^^^^ expected `i32`, found `usize`
   |
help: you can convert an `usize` to `i32` and panic if the converted value wouldn't fit
   |
88 |                 if self.selected_cell_index + 1 < self.cells.len().try_into().unwrap() {
   |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> src/views/interface/wordfinder.rs:98:48
   |
98 |                 if (self.selected_cell_index + self.size.x) < self.cells.len() {
   |                                                ^^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot add `usize` to `i32`
  --> src/views/interface/wordfinder.rs:98:46
   |
98 |                 if (self.selected_cell_index + self.size.x) < self.cells.len() {
   |                                              ^ no implementation for `i32 + usize`
   |
   = help: the trait `std::ops::Add<usize>` is not implemented for `i32`

error[E0308]: mismatched types
  --> src/views/interface/wordfinder.rs:98:63
   |
98 |                 if (self.selected_cell_index + self.size.x) < self.cells.len() {
   |                                                               ^^^^^^^^^^^^^^^^ expected `i32`, found `usize`
   |
help: you can convert an `usize` to `i32` and panic if the converted value wouldn't fit
   |
98 |                 if (self.selected_cell_index + self.size.x) < self.cells.len().try_into().unwrap() {
   |                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> src/views/interface/wordfinder.rs:100:49
    |
100 |                     self.selected_cell_index += cells_to_move.floor() as usize;
    |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot add-assign `usize` to `i32`
   --> src/views/interface/wordfinder.rs:100:46
    |
100 |                     self.selected_cell_index += cells_to_move.floor() as usize;
    |                                              ^^ no implementation for `i32 += usize`
    |
    = help: the trait `std::ops::AddAssign<usize>` is not implemented for `i32`

error[E0308]: mismatched types
   --> src/views/interface/wordfinder.rs:104:48
    |
104 |                 if (self.selected_cell_index - self.size.x) >= 0 {
    |                                                ^^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot subtract `usize` from `i32`
   --> src/views/interface/wordfinder.rs:104:46
    |
104 |                 if (self.selected_cell_index - self.size.x) >= 0 {
    |                                              ^ no implementation for `i32 - usize`
    |
    = help: the trait `std::ops::Sub<usize>` is not implemented for `i32`

error[E0308]: mismatched types
   --> src/views/interface/wordfinder.rs:106:49
    |
106 |                     self.selected_cell_index -= cells_to_move.floor() as usize;
    |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot subtract-assign `usize` from `i32`
   --> src/views/interface/wordfinder.rs:106:46
    |
106 |                     self.selected_cell_index -= cells_to_move.floor() as usize;
    |                                              ^^ no implementation for `i32 -= usize`
    |
    = help: the trait `std::ops::SubAssign<usize>` is not implemented for `i32`

error[E0308]: mismatched types
   --> src/views/interface/wordfinder.rs:131:44
    |
131 |             if self.selected_cell_index == i {
    |                                            ^ expected `i32`, found `usize`

error[E0277]: can't compare `i32` with `usize`
   --> src/views/interface/wordfinder.rs:131:41
    |
131 |             if self.selected_cell_index == i {
    |                                         ^^ no implementation for `i32 == usize`
    |
    = help: the trait `std::cmp::PartialEq<usize>` is not implemented for `i32`

warning: unused import: `View`
  --> src/views/interface/interface.rs:16:31
   |
16 | use cursive::view::{Nameable, View};
   |                               ^^^^

error: aborting due to 12 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `curse`.

To learn more, run the command again with --verbose.
